<resources>
    <string name="app_name">Gallery_noob</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="l_u">Lưu</string>
    <string name="tho_t">Thoát</string>
    <string name="chitiet">Chi tiết</string>
    <string name="sua">Sửa</string>
    <string name="title_activity_maps">Bản đồ</string>
    <string name="Begin">Bắt đầu</string>
    <string name="chia_s">Chia sẻ</string>
    <string name="ch_nh_s_a">Chỉnh sửa</string>
    <string name="y_u_th_ch">Yêu thích</string>
    <string name="x_a">Xóa</string>
    <string name="th_m">Thêm</string>
    <string name="themTrongFullScreen">Thêm</string>
    <string name="s_a">Sửa</string>
    <string name="Search_bar">Tìm kiếm</string>
    <string name="ch_n_m_c">Chọn Mục</string>
    <string name="th_vi_n">Thư viện</string>
    <string name="thich">Yêu thích</string>
    <string name="album">Album</string>
    <string name="t_o_m_c_y_u_th_ch">Tạo mục yêu thích</string>
    <string name="ph_ng_to">Phóng to</string>
    <string name="thu_nh">Thu nhỏ</string>
    <string name="ch_p_nh_quay_video">Chụp ảnh</string>
    <string name="tr_nh_chi_u">Trình chiếu</string>
    <string name="chi_ti_t">Chi tiết</string>
    <string name="hinhnen">Đặt làm hình nền</string>
    <string name="face_tag">Face tag</string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="t_t_c_nh">Tất cả ảnh</string>
    <string name="ng_y">Ngày</string>
    <string name="th_ng">Tháng</string>
    <string name="n_m">Năm</string>
    <string name="ch_n">Chọn</string>
    <string name="h_y">Hủy</string>
    <string name="themVaoAlbum">Thêm vào album</string>
    <string name="datMatKhau">Đặt mật khẩu</string>
    <string name="hienthi">Hiển thị</string>
    <string name="warning_thumucdaco">Thư muc cùng tên đã tồn tại</string>
    <string name="nhapMatKhau">Nhập mật khẩu</string>
    <string name="saiMatKhau">Sai mật khẩu</string>
    <string name="goMatKhau">Gỡ mật khẩu</string>
    <string name="doiDiaDiem">Không có thông tin vị trí</string>
    <string name="xoaThuMuc">Xóa thư mục</string>
    <string name="doiTenThanh">Đổi tên thành ...</string>
    <string name="ChonNN">Chọn ngôn ngữ...</string>
    <string name="warningAgain">Bạn có chắc không ?</string>
    <string name="warningSentence">Bạn có chắc thực hiện thao tác xóa? Quá trình này không thể khôi phục lại.</string>
    <string name="cancelDialog">Hủy bỏ</string>
    <string name="deleteDialog">Xóa</string>
    <string name="quayVideo">Quay video</string>
</resources>