<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#D18383"
        android:drawablePadding="10dp"
        android:gravity="start|left|center_vertical"
        android:paddingLeft="11dp"
        android:paddingRight="10dp"
        android:text="@string/datMatKhau"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="113dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="411dp"
            android:layout_height="56dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@color/ef_black_alpha_aa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.017"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:text="@string/hienthi"
            app:backgroundTint="#038FFD" />

        <Button
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/goMatKhau"
            app:backgroundTint="#D14F4F" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/l_u"
        app:backgroundTint="#17C81E" />

</LinearLayout>