<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/dialog_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/del_icon" />
    <TextView
        android:id="@+id/warning_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warningAgain"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_del"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    <TextView
        android:id="@+id/warning_sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warningSentence"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/warning_del"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/warning_sentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp">
        <Button
            android:id="@+id/cancel_btn_dialog"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textAllCaps="false"
            android:text="@string/cancelDialog"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="@color/black"
            app:backgroundTint="#000000"
            android:background="@drawable/btn_background_dialog"/>
        <Button
            android:id="@+id/delete_btn_dialog"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/deleteDialog"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="#FD0A0A"
            app:backgroundTint="#FD0A0A"
            android:background="@drawable/btn_background_dialog"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>